# chip8-emulator

./: .gitignore  CMakeLists.txt  LICENCE  Makefile  a.out  chip8.cpp  chip8.hpp  imgui.ini  main.cpp  platform.cpp  platform.hpp  readme.md
imgui/: imconfig.h  imgui-SFML.cpp
